<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/bienvenido_margin"
                android:layout_marginTop="@dimen/bienvenido_margin"
                android:layout_marginBottom="@dimen/bienvenido_margin"
                android:fontFamily="@font/roboto"
                android:text="@string/bienvenido"
                android:textColor="@color/black"
                android:textSize="@dimen/bienvenido_textSize" />

            <TextView
                android:id="@+id/nombreUsuarioBienvenidoTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/bienvenido_margin"
                android:layout_marginTop="@dimen/bienvenido_margin"
                android:layout_marginBottom="@dimen/bienvenido_margin"
                android:fontFamily="@font/roboto"
                android:text="@string/nombreUsuario_bienvenido"
                android:textColor="@color/black"
                android:textSize="@dimen/bienvenido_textSize" />
        </LinearLayout>

        <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/citasHoyCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            app:cardCornerRadius="@dimen/cornerRadius"
            app:cardElevation="@dimen/cardElevation"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/cardview_shadow_end_color"
                    android:orientation="horizontal"
                    android:padding="@dimen/padding_cardview_relativeLayout">

                    <ImageView
                        android:id="@+id/iconCitasHoyImageView"
                        android:layout_width="@dimen/image_citasHoy"
                        android:layout_height="@dimen/image_citasHoy"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:paddingLeft="14dp"
                        android:paddingRight="14dp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="4dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginTop="2dp"
                        android:layout_toEndOf="@+id/iconCitasHoyImageView"
                        android:layout_toRightOf="@+id/iconCitasHoyImageView"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/citasHoyTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"
                            android:fontFamily="@font/roboto"
                            android:text="@string/citas_de_hoy"
                            android:textColor="@color/black"
                            android:textSize="@dimen/cardview_textSize"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/nombreClienteCitasHoyTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto"
                            android:text="@string/nombre_citas_hoy"
                            android:textSize="@dimen/citasHoy_texto_textSize" />

                        <TextView
                            android:id="@+id/horaCitasHoyTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto"
                            android:text="@string/hora_citas_hoy"
                            android:textSize="@dimen/citasHoy_texto_textSize" />

                        <TextView
                            android:id="@+id/servicioCitasHoyTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto"
                            android:text="@string/servicio_citas_hoy"
                            android:textSize="@dimen/citasHoy_texto_textSize" />

                        <TextView
                            android:id="@+id/montoCitasHoyTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto"
                            android:text="@string/monto_citas_hoy"
                            android:textSize="@dimen/citasHoy_texto_textSize" />
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/agendaCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            app:cardCornerRadius="@dimen/cornerRadius"
            app:cardElevation="@dimen/cardElevation"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/agendaImageView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/image_cardview_height"
                    android:scaleType="centerCrop"
                    android:src="@drawable/agenda_image" />

                <TextView
                    android:id="@+id/agendaTextView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/textview_height"
                    android:background="@color/cardview_shadow_end_color"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:text="@string/agenda_cardview"
                    android:textColor="@color/black"
                    android:textSize="@dimen/cardview_textSize" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/serviciosCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            app:cardCornerRadius="@dimen/cornerRadius"
            app:cardElevation="@dimen/cardElevation"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/serviciosImageView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/image_cardview_height"
                    android:scaleType="centerCrop"
                    android:src="@drawable/haricut_image" />

                <TextView
                    android:id="@+id/serviciosTextView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/textview_height"
                    android:background="@color/cardview_shadow_end_color"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:text="@string/servicios_cardview"
                    android:textColor="@color/black"
                    android:textSize="@dimen/cardview_textSize" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/clientesCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            app:cardCornerRadius="@dimen/cornerRadius"
            app:cardElevation="@dimen/cardElevation"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/clientesImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/image_cardview_height"
                    android:scaleType="centerCrop"
                    android:src="@drawable/clientes_image" />

                <TextView
                    android:id="@+id/clientesTextView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/textview_height"
                    android:background="@color/cardview_shadow_end_color"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:text="@string/clientes_cardview"
                    android:textColor="@color/black"
                    android:textSize="@dimen/cardview_textSize" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>